[tool.poetry]
name = "kotak-neo-webhook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
hypercorn = "^0.16.0"
neo-api-client = {git = "https://github.com/Kotak-Neo/kotak-neo-api.git"}
aiohttp = {extras = ["speedups"], version = "^3.9.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
